<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <android.support.design.button.MaterialButton
        style="@style/Widget.News.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_featured_label" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.News.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_apartment_label" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.News.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_accessories_label" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.News.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_shoes_label" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.News.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_tops_label" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.News.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_bottoms_label" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.News.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_dresses_label" />


    <android.support.design.button.MaterialButton
        style="@style/Widget.News.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_account_label" />

</LinearLayout>